spec/types/valid/any_accepts_all.js
export const payloads = [
  { any_val: 42 },
  { any_val: 'string' },
  { any_val: true },
  { any_val: null },
  { any_val: [1, 2] },
  { any_val: { key: 'value' } },
]
export const expected = []
